<?xml version="1.0"?>
<package format="2">
  <name>path_planning</name>
  <version>0.1.1</version>
  <description>TODO</description>

  <maintainer email="snoliver@umich.edu">Sean Oliver</maintainer>


  <license>BSD 3-Clause License</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>


  <url type="repository">https://github.com/umigv/path_planning.git</url>


</package>